[gd_scene load_steps=9 format=3 uid="uid://so18tatfe4un"]

[ext_resource type="Script" uid="uid://dndkv03yk8wya" path="res://scripts/ui/main_menu.gd" id="1_2ysvc"]
[ext_resource type="Texture2D" uid="uid://bup8l41f00ub0" path="res://assets/art/ui/title_small.png" id="1_vjtqc"]
[ext_resource type="AudioStream" uid="uid://c2sx68vhfkwvj" path="res://assets/audio/sfx/ui/button_pressed.ogg" id="2_2ysvc"]
[ext_resource type="Theme" uid="uid://dg0bxpr4spgob" path="res://assets/themes/menu_theme.tres" id="2_6jbdy"]
[ext_resource type="PackedScene" uid="uid://dips56jowu6et" path="res://scenes/ui/SceneTransition.tscn" id="2_bhu4a"]
[ext_resource type="AudioStream" uid="uid://btk3vkog5moeq" path="res://assets/audio/music/StarEye Spaceway - ViRiX Dreamcore .ogg" id="2_xpiny"]
[ext_resource type="Script" uid="uid://druqdf0m635aj" path="res://scripts/ui/music.gd" id="4_7mi0g"]
[ext_resource type="PackedScene" uid="uid://dvgka2vsrq0hy" path="res://scenes/ui/settings_menu.tscn" id="8_7mi0g"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("scene_transition", "menu_music", "sfx_pressed")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ysvc")
scene_transition = NodePath("SceneTransition")
menu_music = NodePath("Sound/Music")
sfx_pressed = NodePath("Sound/ButtonPressedSFX")

[node name="SceneTransition" parent="." instance=ExtResource("2_bhu4a")]
layout_mode = 1

[node name="Sound" type="Node" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("2_xpiny")
volume_db = -25.0
bus = &"Music"
script = ExtResource("4_7mi0g")
fade_in_target = -12
fade_in_time = 0.5
fade_out_time = 7

[node name="ButtonPressedSFX" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("2_2ysvc")
volume_db = -6.0
bus = &"SFX"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_edit_use_anchors_ = true

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="InitMenu" type="VBoxContainer" parent="MarginContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 55

[node name="Title" type="TextureRect" parent="MarginContainer/BoxContainer/InitMenu"]
layout_mode = 2
texture = ExtResource("1_vjtqc")

[node name="MenuOptions" type="VBoxContainer" parent="MarginContainer/BoxContainer/InitMenu"]
layout_mode = 2
theme = ExtResource("2_6jbdy")
theme_override_constants/separation = 10

[node name="StartGame" type="Button" parent="MarginContainer/BoxContainer/InitMenu/MenuOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Start Game"
flat = true

[node name="LevelSelect" type="Button" parent="MarginContainer/BoxContainer/InitMenu/MenuOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Level Select"
flat = true

[node name="Customize" type="Button" parent="MarginContainer/BoxContainer/InitMenu/MenuOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Customize"
flat = true

[node name="Settings" type="Button" parent="MarginContainer/BoxContainer/InitMenu/MenuOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Settings"
flat = true

[node name="ExitGame" type="Button" parent="MarginContainer/BoxContainer/InitMenu/MenuOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Exit Game"
flat = true

[node name="SettingsMenu" parent="MarginContainer/BoxContainer" node_paths=PackedStringArray("sfx_pressed", "prev_menu") instance=ExtResource("8_7mi0g")]
unique_name_in_owner = true
visible = false
layout_mode = 2
sfx_pressed = NodePath("../../../Sound/ButtonPressedSFX")
prev_menu = NodePath("../InitMenu")
